Fix #101, crash with cursed boss item config